--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
         </svg>
     </label>
     <div class="menu">
-        <div>Home</div>
-        <div>About</div>
-        <div>Hello</div>
-        <div>Contact</div>
+        <div><a href="All.html">All</a></div>
+        <div><a href="Psycho.html">Psychology</a></div>
+        <div><a href="Biogra.html">Biography</a></div>
+        <div><a href="Edu.html">Educational</a></div>
+        <div><a href="Litre.html">Literature</a></div>
     </div>
     
     <span class="main">
