--- a/index.html
+++ b/index.html
@@ -1,39 +1,42 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>lehulu gebeya</title>
-<meta name="keywords" content="" />
-<meta name="description" content="" />
-<link href="styles.css" rel="stylesheet" type="text/css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styless.css">
+    <title>Book Store</title>
 </head>
-<body><input id="test" type="checkbox" />
-    <label for="test">
-        <svg class="burger" width="86" height="60" viewbox="0 0 150 150">
-            <g stroke-width="12">   
-                <line x1="6" y1="6" x2="80" y2="6"></line>
-                <line x1="6" y1="28" x2="80" y2="28"></line>
-                <line x1="6" y1="50" x2="80" y2="50"> </line>
-            </g>
-        </svg>
-        <svg class="close" width="86" height="60" viewbox="0 0 150 150">
-            <g stroke-width="12">   
-                <line x1="42" y1="6" x2="42" y2="80"></line>
-                <line x1="6" y1="42" x2="80" y2="42"></line>
-            </g>
-        </svg>
-    </label>
-    <div class="menu">
-        <div><a href="All.html">All</a></div>
-        <div><a href="Psycho.html">Psychology</a></div>
-        <div><a href="Biogra.html">Biography</a></div>
-        <div><a href="Edu.html">Educational</a></div>
-        <div><a href="Litre.html">Literature</a></div>
-    </div>
-    
-    <span class="main">
-        <span>Pure CSS Menu</span>
+<body>
+    <input id="test" type="checkbox" />
+<label for="test">
+    <svg class="burger" width="86" height="60" viewbox="0 0 150 150">
+        <g stroke-width="12">   
+            <line x1="6" y1="6" x2="80" y2="6"></line>
+            <line x1="6" y1="28" x2="80" y2="28"></line>
+            <line x1="6" y1="50" x2="80" y2="50"> </line>
+        </g>
+    </svg>
+    <svg class="close" width="86" height="60" viewbox="0 0 150 150">
+        <g stroke-width="12">   
+            <line x1="42" y1="6" x2="42" y2="80"></line>
+            <line x1="6" y1="42" x2="80" y2="42"></line>
+        </g>
+    </svg>
+</label>
+<div class="menu">
+    <div><a href="all.html">All</a></div>
+    <div><a href="psychology.html">Psychology</a></div>
+    <div><a href="literature.html">Literature</a></div>
+    <div><a href="biography.html">Biography</a></div>
+    <div><a href="educational.html">Educational</a></div>
+</div>
+
+<span class="main">
+    <span>
+        <h1>Ever Grow Book Store</h1>
     </span>
-    
+</span>
 </body>
 </html>
